--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">World best lasagna</a>
+        <ul><a href="recipes/lasagna.html">World best lasagna</a></ul>
+        <ul><a href="recipes/Broccoli-Cauliflower-Casserole.html">Broccoli Cauliflower Casserole
+        </a></ul>
     </body>
 </html>
